--- a/test2.html
+++ b/test2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="static/test21.css">
+    <link rel="stylesheet" href="test21.css">
 
         <title>Резюме</title>
 </head>
