--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav>
-        <a href="test2.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="web_sorting.html">Мое веб-приложение: сортировщик </a>
         <a href="webtest.html">тестовая страница </a>
     <!--    <a style="color: green; padding-top: 10px; padding-bottom: 10px; padding-left: 5px; padding-right: 5px">Контакты</a>-->
